Fixed toolbar/spinner styling so that spinner covers entire content when loading

--- a/client/src/app/core/loading-spinner/loading-spinner.component.css
+++ b/client/src/app/core/loading-spinner/loading-spinner.component.css
@@ -1,15 +1,21 @@
 .spinner-container {
-    position: relative;
+    position: absolute;
+    top: 0;
+    left: 0;
     height: 100%;
     width: 100%;
+    background-color: rgba(255, 255, 255, 0.6);
+    z-index: 9001;
+}
+
+.sticky-container {
+    position: sticky;
+    top: 30vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    top: 0;
-    left: 0;
-    background-color: rgba(255, 255, 255, 0.7);
-    z-index: 9001;
+    row-gap: 12px;
 }
 
 .spinner-container h1 {
