--- a/client/src/app/core/toolbar-sidenav/toolbar-sidenav.component.css
+++ b/client/src/app/core/toolbar-sidenav/toolbar-sidenav.component.css
@@ -62,3 +62,9 @@
     font-size: 11pt;
     font-weight: normal;
 }
+
+.main-content {
+    position: relative;
+    min-height: 100%;
+    height: auto;
+}
